crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@301.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"bogus\"', '$.datetime()');"
---
SelectStmt@0..51
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..49
    FuncCall@7..49
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'\"bogus\"'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..49
        Sconst@35..49 "'$.datetime()'"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

