crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@302.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34\"', '$.datetime(\"aaa\")');"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..54
    FuncCall@7..54
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'\"12:34\"'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..54
        Sconst@35..54 "'$.datetime(\"aaa\")'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

