crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@304.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '\"10-03-2017\"' @? '$.datetime(\"dd-mm-yyyy\")';"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..57
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..57
      TypeCast@13..27
        AConst@13..27
          Sconst@13..27 "'\"10-03-2017\"'"
      Whitespace@27..28 " "
      Op@28..30 "@?"
      Whitespace@30..31 " "
      AConst@31..57
        Sconst@31..57 "'$.datetime(\"dd-mm-yy ..."
  Ascii59@57..58 ";"

