crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@306.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017\"', '$.datetime(\"dd-mm-yyyy\").type()');"
---
SelectStmt@0..75
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..73
    FuncCall@7..73
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..38
        Sconst@24..38 "'\"10-03-2017\"'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..73
        Sconst@40..73 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

