crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@308.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017 12:34\"', '$.datetime(\"dd-mm-yyyy\").type()');"
---
SelectStmt@0..81
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..79
    FuncCall@7..79
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..44
        Sconst@24..44 "'\"10-03-2017 12:34\"'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..79
        Sconst@46..79 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

