crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@310.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017 12:34 +05:20\"', '$.datetime(\"dd-mm-yyyy HH24:MI TZH:TZM\").type()');"
---
SelectStmt@0..104
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..102
    FuncCall@7..102
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..51
        Sconst@24..51 "'\"10-03-2017 12:34 +0 ..."
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      AConst@53..102
        Sconst@53..102 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@102..103 ")"
  Ascii59@103..104 ";"

