crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@311.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34:56\"', '$.datetime(\"HH24:MI:SS\").type()');"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..71
    FuncCall@7..71
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..36
        Sconst@24..36 "'\"12:34:56\"'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..71
        Sconst@38..71 "'$.datetime(\"HH24:MI: ..."
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

